k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
